--- a/app/index.html
+++ b/app/index.html
@@ -20,6 +20,7 @@
     <script src="components/home/home.js"></script>
     <script src="components/about/about.js"></script>
     <script src="components/users/users.js"></script>
+    <script src="components/create-user/create-user.js"></script>
     <script src="components/nav/nav.js"></script>
   </body>
 </html>
